# trading

./: .editorconfig  .env.example  .env.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  FOUNDATION_CERTIFICATION.md  PHASE0_CERTIFICATION.md  README.md  config.py  dashboard.py  docker-compose.dev.yml  docker-compose.test.yml  legacy_config.py  main.py  pyproject.toml  requirements.txt
ai/: __init__.py  exceptions.py
architecture/: __init__.py  dependency_rules.py  reporting.py  validators.py
artifact_management/: __init__.py  bootstrap.py  exceptions.py
audit/: __init__.py  _store.py  audit_logger.py  audit_reader.py  exporter.py  replay.py
backtesting/: __init__.py  exceptions.py  py.typed
config/: __init__.py  ai.yaml  artifact_management.yaml  connectors.yaml  core.yaml  data.yaml  decision.yaml  execution.yaml  feature_engineering.yaml  feature_flags.yaml  feature_store.yaml  framework_adapters.yaml  hash.py  historical.yaml  indicators.yaml  inference_pipeline.yaml  loader.py  logging.yaml  market_data.yaml  markets.yaml  ml.yaml  ml_engine.yaml  ml_runtime.yaml  model_registry.yaml  monitoring.yaml  notifications.yaml  paper_adapter.yaml  paper_trading.yaml  pipeline.yaml  plugins.yaml  portfolio_sync.yaml  risk.yaml  security.yaml  services.yaml  settings.py  signal_engine.yaml  signal_universe.yaml  storage_providers.yaml  training_pipeline.yaml  workflow.yaml
connectors/: __init__.py  base.py  binance_connector.py  binance_spot_portfolio.py  capabilities.py  exceptions.py  health.py  market_registry.py  metadata.py  normalizer.py  pmex_connector.py  psx_connector.py
core/: __init__.py  decorators.py  dependency.py  indicators.py  lifecycle.py  llm_analyzer.py  registry.py  runtime.py  sentiment.py  signal_universe.py  signal_workbook.py  validation.py
data/: __init__.py  cache.py  dataset.py  decorators.py  dependency.py  exceptions.py  lifecycle.py  lineage.py  loader.py  metadata.py  persistence.py  provenance.py  registry.py  repository.py  result.py  schema.py  serialization.py  state.py  transformer.py  validation.py  validator.py  versioning.py
decision/: __init__.py  exceptions.py
development/: README.md
docs/: configuration.md  phase_gate.md  project_structure.md  setup.md
events/: __init__.py  event_bus.py  event_types.py  persistence.py  replay.py
execution/: __init__.py  exceptions.py
feature_engineering/: __init__.py  exceptions.py
feature_flags/: __init__.py  defaults.py  manager.py  providers.py
feature_store/: __init__.py  exceptions.py
framework_adapters/: __init__.py  bootstrap.py  exceptions.py
health/: __init__.py  checks.py  heartbeat.py  models.py  observability.py  registry.py  service.py
historical/: __init__.py  exceptions.py
inference_pipeline/: __init__.py  exceptions.py
market_data/: __init__.py  exceptions.py
metrics/: __init__.py  in_memory.py  registry.py  types.py
ml/: __init__.py  exceptions.py
ml_engine_plugins/: __init__.py  bootstrap.py  exceptions.py  health.py  health_result.py  ml_runtime_bridge.py  plugin.py  plugin_capability.py  plugin_discovery.py  plugin_lifecycle.py  plugin_loader.py  plugin_manifest.py  plugin_metadata.py  plugin_metrics.py  plugin_record.py  plugin_registry.py  plugin_state.py  plugin_statistics.py  plugin_summary.py  plugin_version.py  validation_result.py  validator.py
ml_runtime/: __init__.py  exceptions.py
model_registry/: __init__.py  exceptions.py
models/: __init__.py  common.py  decision.py  events.py  features.py  market.py  order.py  portfolio.py  position.py  prediction.py  risk.py  signal.py  validation.py
monitoring/: __init__.py  health.py  service.py
notifications/: __init__.py  events.py  manager.py  providers.py
paper_trading/: __init__.py  exceptions.py
pipeline/: __init__.py  builder.py  context.py  decorators.py  exceptions.py  executor.py  lifecycle.py  pipeline.py  registry.py  request.py  response.py  result.py  stage.py  validation.py
platform_logging/: __init__.py  context.py  factory.py  filters.py  formatters.py  handlers.py  logger.py
plugins/: __init__.py  capability.py  compatibility.py  decorators.py  dependency.py  discovery.py  exceptions.py  lifecycle.py  loader.py  manager.py  manifest.py  plugin.py  registry.py  sandbox.py  state.py  validation.py
portfolio_sync/: __init__.py  contracts.py  projection.py  service.py  universe.py
prediction_validation/: __init__.py  exceptions.py
research/: __init__.py
risk/: __init__.py  exceptions.py
scripts/: __init__.py  bootstrap.py  dev.py  diagnose_hold_pipeline.py  diagnose_technical_signals.py  foundation_certification.py  proof_universe_scan_path.py  release.py  seed_production_workbook_technical.py  sync_tios_status.py  validate_architecture.py  validate_configuration.py  validate_dependencies.py  validate_environment.py  validate_phase0.py  validate_production_workbook.py  validate_release.py  validate_tios.py  validation_core.py  verify_dashboard_fresh_ui.py
security/: __init__.py  api_keys.py  audit_hook.py  credentials.py  encryption.py  hash_provider.py  models.py  secrets.py  tokens.py
services/: __init__.py  container.py  context.py  decorators.py  discovery.py  exceptions.py  factory.py  lifecycle.py  provider.py  registry.py  service.py  validation.py
signal_engine/: __init__.py  exceptions.py
storage_providers/: __init__.py  bootstrap.py  exceptions.py
strategy_builder/: __init__.py  examples.py  exceptions.py  identity.py  registry.py  serialization.py
tests/: ai_helpers.py  artifact_management_helpers.py  connectors_helpers.py  core_helpers.py  data_helpers.py  decision_helpers.py  execution_helpers.py  feature_engineering_helpers.py  feature_store_helpers.py  framework_adapters_helpers.py  historical_helpers.py  inference_pipeline_helpers.py  market_data_helpers.py  ml_engine_plugins_helpers.py  ml_helpers.py  ml_runtime_helpers.py  model_registry_helpers.py  paper_helpers.py  pipeline_fixtures.py  pipeline_helpers.py  plugin_helpers.py  risk_helpers.py  services_fixtures.py  signal_helpers.py  (+7 more)
(+1129 files in other folders)
